# Descent-Mobile

./: .gitignore  build.gradle
Descent/: CMakeLists.txt  build.gradle
Descent/src/main/: AndroidManifest.xml
Descent/src/main/java/tuchsen/descent/: DescentView.java
gradle/wrapper/: gradle-wrapper.properties
